@startuml
'https://plantuml.com/class-diagram

class WeightedCostStrategy
class MonetaryCostStrategy
class CarbonCostStrategy

interface CostStrategy {
getCost(ShipmentOption) : ShipmentCost
}

CostStrategy <|.. MonetaryCostStrategy
CostStrategy <|.. CarbonCostStrategy
CostStrategy <|.. WeightedCostStrategy

WeightedCostStrategy --> MonetaryCostStrategy
WeightedCostStrategy --> CarbonCostStrategy



@enduml